<resources>
    <string name="app_name">Share Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <string name="minute">minute</string>
    <string name="hour">hour</string>
    <string name="day">day</string>
    <string name="sharing">Sharing</string>
    <string name="group">Group</string>
    <string name="member_list">Members List</string>
    <string name="interval_period">Interval Period</string>
    <string name="status">Status:</string>
    <string name="last">Last:</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="time_remaining">Remaining:</string>
    <string name="group_id">Group Id</string>
    <string name="group_password">Group Password</string>
    <string name="group_joint">Joint</string>
    <string name="group_joint_near">Joint near</string>
    <string name="group_leave">Leave</string>
    <string name="group_create">Create</string>
    <string name="empty_list">Empty list</string>
    <string name="group_open_joint">Open Joint</string>
    <string name="group_close_joint">Close Joint</string>

    <string name="action_settings">Settings</string>
</resources>
